--- a/lide/david-stancel.html
+++ b/lide/david-stancel.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-9460658f.js">
+		<link rel="modulepreload" href="../_app/immutable/start-0e5dcb5d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-bdd48cb7.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-bd8cdc78.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-b86ef32e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-0b244c31.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-8a2858b4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-53838bd3.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-167bc9fc.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-5ba877b2.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-7190e3e1.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-fa90e638.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-188c4a18.js"><title>David Stancel | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-67436830.js"><title>David Stancel | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -135,7 +135,7 @@
         <div class="mt-2">Twitter: <a rel="noreferrer" href="https://twitter.com/dave_stancel" target="_blank" class="font-bold">@dave_stancel</a></div>
         
         <div class="mt-2">Web: <a href="https://stanceldavid.sk/" target="_blank" rel="noreferrer" class="font-bold">stanceldavid.sk</a></div></div></div>
-    <div class="mt-6 utxo-markdown"><p>Dávid vyštudoval Ekonómiu na Masarykovej univerzite v Brne, a Master of Science v obore Digitálnych mien na Univerzite v Nikózii na Cypre. Pracoval  ako IT auditor a konzultant v <a href="https://www.pwc.com/sk/sk/" class="underline hover:no-underline" target="_blank">PwC Slovensko</a>. Spoluzakladal <a href="https://blockchainslovakia.sk/" class="underline hover:no-underline" target="_blank">Blockchain Slovakia</a> a pracoval ako konzultant v oblasti kryptomien a blockchain technológií na niekoľkých slovenských ako aj zajhraničných startupoch a projektoch a v súčasnosti je na pozícii Chief Investment Officer vo <a href="https://fumbi.network/" class="underline hover:no-underline" target="_blank">Fumbi</a>. David často prednáša o kryptomenách a blockchaine na medzinárodných fórach, konferenciách či univerzitách. Taktiež učí vlastný predmet o kryptomenách na Slovenskej Technickej univerzite ako aj na Ekonomickej univerzite v Bratislave. Je taktiež autorom knihy Coinstory, ktorá mapuje históriu a evolúciu kryptomien (<a href="https://coinstory.tech/" class="underline hover:no-underline" target="_blank">CoinStory.tech</a>).</p></div>
+    <div class="mt-6 utxo-markdown"><p>Dávid vyštudoval Ekonómiu na Masarykovej univerzite v Brne, a Master of Science v obore Digitálnych mien na Univerzite v Nikózii na Cypre. Pracoval  ako IT auditor a konzultant v <a href="https://www.pwc.com/sk/sk/" class="underline hover:no-underline" target="_blank">PwC Slovensko</a>. Spoluzakladal <a href="https://blockchainslovakia.sk/" class="underline hover:no-underline" target="_blank">Blockchain Slovakia</a> a pracoval ako konzultant v oblasti kryptomien a blockchain technológií na niekoľkých slovenských ako aj zajhraničných startupoch a projektoch. David často prednáša o kryptomenách a blockchaine na medzinárodných fórach, konferenciách či univerzitách. Taktiež učí vlastný predmet o kryptomenách na Slovenskej Technickej univerzite ako aj na Ekonomickej univerzite v Bratislave. Je taktiež autorom knihy Coinstory, ktorá mapuje históriu a evolúciu kryptomien (<a href="https://coinstory.tech/" class="underline hover:no-underline" target="_blank">CoinStory.tech</a>).</p></div>
     <div class="mt-6"><h2 class="uppercase mb-4 text-md">Události (0)</h2>
       <div>Tento člověk zatím nemá v programu žádnou událost.</div></div></section></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
@@ -158,14 +158,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1t561nc">
-			import { start } from "../_app/immutable/start-9460658f.js";
+		<script type="module" data-sveltekit-hydrate="ze5xs9">
+			import { start } from "../_app/immutable/start-0e5dcb5d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1t561nc"]').parentNode,
-				version: "1681457521220",
+				target: document.querySelector('[data-sveltekit-hydrate="ze5xs9"]').parentNode,
+				version: "1681457590887",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
